에디터 시작 맵 메인맵으로 수정

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,7 +42,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ViewExpand",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ViewReduce",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Attack",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="ViewRightClick",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RightClick",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Alt",Key=LeftAlt,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToRun",Key=Comma,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Roll",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
