게임 시작 맵 원래대로 다시 변경

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/MyCharacter/Blueprints/BP_MyGameMode.BP_MyGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-EditorStartupMap=/Game/Blueprints/Maps/Title.Title
+EditorStartupMap=/Game/Blueprints/Maps/MainMap.MainMap
 GameDefaultMap=/Game/Blueprints/Maps/Title.Title
 
 [/Script/Engine.CollisionProfile]
@@ -110,4 +110,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
