--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/MyCharacter/Blueprints/BP_MyGameMode.BP_MyGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-EditorStartupMap=/Game/Blueprints/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Blueprints/Maps/MainMap.MainMap
 GameDefaultMap=/Game/Blueprints/Maps/Title.Title
 
 [/Script/Engine.CollisionProfile]
