--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Intermediate/ProjectFiles/ProjectJ.vcxproj
 Intermediate/ProjectFiles/ProjectJ.vcxproj.user
 Intermediate/ProjectFiles/UE4.vcxproj
 Intermediate/ProjectFiles/UE4.vcxproj.user
+Intermediate/ProjectFiles/UE4.vcxproj.user
